wk_taa_taaqa/src/objects/AMS_Renewal_Data__c.object
<CustomObject>
    <fields>
        <fullName>AMS_Description__c</fullName>
        <label>AMS Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Price__c</fullName>
        <label>AMS Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMS_Produci_ID__c</fullName>
        <label>AMS Produci ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Order_Number__c</fullName>
        <label>AMS Renewal Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Row_Number__c</fullName>
        <label>AMS Row Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_renewal_Tier__c</fullName>
        <label>AMS renewal Tier</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFX_Account_Number__c</fullName>
        <label>PFX Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>AMS Renewal Data</label>
    <nameField>
        <label>AMS Renewal Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMS Renewal Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>